[package]
name = "pong_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = "0.9.1"
pong_core = {git = "https://github.com/duckfromdiscord/pong-core.git" }
libmath = "0.2.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "debuginfo" # strip true does NOT work with wasm.